# algorithms

./: .clang-format  .clangd  .gitignore  1.cpp  1.py  1669. 合并两个链表.cpp  2.cpp  A_All_Lengths_Subtraction.cpp  A_Did_We_Get_Everything_Covered.cpp  A_Going_Home.cpp  A_Happy_Birthday_4.cpp  A_Homework.cpp  A_In_the_Dream.cpp  A_Incremental_Subarray.cpp  A_Little_Fairy_s_Painting.cpp  A_Painting_With_Two_Colors.cpp  A_Redstone.cpp  A_Sigma_Cubes.cpp  A_The_Very_Beautiful_Blanket.cpp  B_Buying_gifts.cpp  B_Discounts.cpp  B_Fibonacci_Reversed.cpp  B_Find_Permutation_2.cpp  B_Like_the_Bitset.cpp  B_The_Secret_Number.cpp  B_Villagers.cpp  CMakeLists.txt  C_1_Adjust_The_Presentation_Easy_Version.cpp  C_1_The_Cunning_Seller_easy_version.cpp  C_2_Adjust_The_Presentation_Hard_Version.cpp  C_Alice_s_Adventures_in_Cutting_Cake.cpp  C_Alternated.cpp  C_Anniversary.cpp  C_Bitwise_Balancing.cpp  C_Compressed_Bracket_Sequence.cpp  C_Concat_X_th.cpp  C_Max_Tree.cpp  C_New_Skill_Acquired.cpp  C_Non_Descending_Arrays.cpp  C_Password_Cracking.cpp  (+93 more)
AtCoder/abc/: atcoder2pdf.py
LOJ/dp/: 10177_一本通_5_5_例_3_修剪草坪.cpp  10181_一本通_5_5_练习_2_绿色通道.cpp  160_树形背包.cpp
LOJ/图/: 137_最小瓶颈路_加强版.cpp
LOJ/数学/: 162_快速幂_2.cpp
LOJ/数据结构/: 10178_一本通_5_5_例_4_旅行问题.cpp
LuoGu/: P_1656_炸铁路.cpp  P_3916_图的遍历.cpp
LuoGu/dp/: P_10974_Accumulation_Degree.cpp  P_1131_ZJOI_2007_时态同步.cpp  P_1282_多米诺骨牌.cpp  P_1352_没有上司的舞会.cpp  P_1725_琪露诺.cpp  P_1850_NOIP_2016_提高组_换教室.cpp  P_1880_NOI_1995_石子合并.cpp  P_2016_战略游戏.cpp  P_2458_SDOI_2006_保安站岗.cpp  P_2473_SCOI_2008_奖励关.cpp  P_3237_HNOI_2014_米特运输.cpp  P_3478_POI_2008_STA_Station.cpp  P_3523_POI_2011_DYN_Dynamite.cpp  P_3554_POI_2013_LUK_Triumphal_arch.cpp  P_3565_POI_2014_HOT_Hotels.cpp  P_3574_POI_2014_FAR_FarmCraft.cpp  P_3647_APIO_2014_连珠线.cpp  P_3903_导弹拦截III.cpp  P_4084_USACO_17_DEC_Barn_Painting_G.cpp  P_4170_CQOI_2007_涂色.cpp  P_4310_绝世好题.cpp  P_4316_绿豆蛙的归宿.cpp  P_4657_CEOI_2017_Chase.cpp  P_6192_模板_最小斯坦纳树.cpp  P_6419_COCI_2014_2015_1_Kamp.cpp  P_7414_USACO_21_FEB_Modern_Art_3_G.cpp  P_9242_蓝桥杯_2023_省_B_接龙数列.cpp  T_228730_烽火传递.cpp
LuoGu/图/: B_3647_模板_Floyd.cpp  B_4016_树的直径.cpp  P_1344_USACO_4_4_追查坏牛奶_Pollutant_Control.cpp  P_1399_NOI_2013_快餐店.cpp  P_1993_小_K_的农场.cpp  P_2491_SDOI_2011_消防.cpp  P_2607_ZJOI_2008_骑士.cpp  P_2610_ZJOI_2012_旅游.cpp  P_2740_USACO_4_2_草地排水_Drainage_Ditches.cpp  P_3007_USACO_11_JAN_The_Continental_Cowngress_G.cpp  P_3209_HNOI_2010_平面图判定.cpp  P_3304_SDOI_2013_直径.cpp  P_3376_模板_网络最大流.cpp  P_3381_模板_最小费用最大流.cpp  P_3385_模板_负环.cpp  P_3629_APIO_2010_巡逻.cpp  P_3806_模板_点分治.cpp  P_5782_POI_2001_和平委员会.cpp  P_5905_模板_全源最短路_Johnson.cpp  P_6175_无向图的最小环问题.cpp
LuoGu/字符串/: P_3804_模板_后缀自动机_SAM.cpp  P_3805_模板_Manacher.cpp  P_3809_模板_后缀排序.cpp  P_3975_TJOI_2015_弦论.cpp
LuoGu/数学/: P_10031_Cfz_Round_3_Xor_with_Gcd.cpp  P_1045_NOIP_2003_普及组_麦森数.cpp  P_1247_取火柴游戏.cpp  P_12847_蓝桥杯_2025_国_A_斐波那契数列.cpp  P_1450_HAOI_2008_硬币购物.cpp  P_2043_质因子分解.cpp  P_2197_模板_Nim_游戏.cpp  P_2261_CQOI_2007_余数求和.cpp  P_3803_模板_多项式乘法_FFT.cpp  P_3812_模板_线性基.cpp  P_3857_TJOI_2008_彩灯.cpp  P_4199_万径人踪灭.cpp  P_4549_模板_裴蜀定理.cpp  P_4570_BJWC_2011_元素.cpp
LuoGu/数据结构/: AT_abc_288_d_ABC_288_D_Range_Add_Query.cpp  P_1295_TJOI_2011_书架.cpp  P_1377_TJOI_2011_树的序.cpp  P_1383_高级打字机.cpp  P_1438_无聊的数列.cpp  P_1494_国家集训队_小_Z_的袜子.cpp  P_1607_USACO_09_FEB_Fair_Shuttle_G.cpp  P_1627_CQOI_2009_中位数.cpp  P_1712_NOI_2016_区间.cpp  P_1903_国家集训队_数颜色_维护队列_模板_带修莫队.cpp  P_1937_USACO_10_MAR_Barn_Allocation_G.cpp  P_1972_SDOI_2009_HH的项链.cpp  P_2161_SHOI_2009_会场预约.cpp  P_2184_贪婪大陆.cpp  P_2464_SDOI_2008_郁闷的小_J.cpp  P_2468_SDOI_2010_粟粟的书架.cpp  P_2572_SCOI_2010_序列操作.cpp  P_2709_小B的询问_模板_莫队.cpp  P_2824_HEOI_2016_TJOI_2016_排序.cpp  P_3157_CQOI_2011_动态逆序对.cpp  P_3373_模板_线段树_2.cpp  P_3384_模板_重链剖分_树链剖分.cpp  P_3586_POI_2015_R_2_物流_Logistics.cpp  P_3605_USACO_17_JAN_Promotion_Counting_P.cpp  P_3834_模板_可持久化线段树_2.cpp  P_4054_JSOI_2009_计数问题.cpp  P_4113_HEOI_2012_采花.cpp  P_4145_上帝造题的七分钟_2_花神游历各国.cpp  P_4198_楼房重建.cpp  P_4344_SHOI_2015_脑洞治疗仪.cpp  P_4513_小白逛公园.cpp  P_4514_上帝造题的七分钟.cpp  P_5142_区间方差.cpp  P_5490_模板_扫描线_矩形面积并.cpp  P_6327_区间加区间_sin_和.cpp  P_9474_yLOI_2022_长安幻世绘.cpp  P_9989_Ynoi_Easy_Round_2023_TEST_69.cpp
LuoGu/贪心/: P_1080_NOIP_2012_提高组_国王游戏.cpp  P_1842_USACO_05_NOV_奶牛玩杂技.cpp  P_2512_HAOI_2008_糖果传递.cpp  P_2949_USACO_09_OPEN_Work_Scheduling_G.cpp  P_4053_JSOI_2007_建筑抢修.cpp  P_4090_USACO_17_DEC_Greedy_Gift_Takers_P.cpp  P_4447_AHOI_2018_初中组_分组.cpp  P_5020_NOIP_2018_提高组_货币系统.cpp  P_6033_NOIP_2004_提高组_合并果子_加强版.cpp  P_8677_蓝桥杯_2018_国_A_采油.cpp  P_8744_蓝桥杯_2021_省_A_左孩子右兄弟.cpp
Others/: Adelaide in a Day.cpp
Others/Aucpl/: James Street.cpp  Tower of Tom's II.cpp  XOR Racer II.cpp
codeforces/1101/: g.cpp
codeforces/1585/: c.cpp
codeforces/1999/: b.cpp
codeforces/2000/: c.cpp
codeforces/2004/: b.cpp
codeforces/2005/: b2.cpp
codeforces/2039/: b.cpp  c1.cpp
codeforces/2040/: b.cpp
codeforces/2051/: c.cpp
codeforces/2055/: b.cpp
codeforces/2060/: b.cpp
codeforces/2065/: c.cpp  c2.cpp  g.cpp
codeforces/2091/: c.cpp
codeforces/2093/: c.cpp
codeforces/2104/: b.cpp
codeforces/2115/: a.cpp
codeforces/2117/: c.cpp  d.cpp
codeforces/2118/: b.cpp
codeforces/2120/: b.cpp
codeforces/2121/: c.cpp  e.cpp
codeforces/2123/: c.cpp  d.cpp  e.cpp
codeforces/GoodQuestions/: 2109-c123.cpp
leetcode/0-100/: 21. 合并两个有序链表.cpp  23. 合并 K 个升序链表.py  32. 最长有效括号.cpp  34. 在排序数组中查找元素的第一个和最后一个位置.cpp  36. 有效的数独.py  4. 寻找两个正序数组的中位数.cpp  41. 缺失的第一个正数.cpp  42. 接雨水.py  50. Pow(x, n).py  51. N 皇后.py  52. N 皇后 II.py  63. 不同路径 II.cpp  68. 文本左右对齐.py  72. 编辑距离.cpp  82. 删除排序链表中的重复元素 II.cpp  85. 最大矩形.cpp  94. 二叉树的中序遍历.cpp  96. 不同的二叉搜索树.cpp
leetcode/100-200/: 104. 二叉树的最大深度.cpp  112. 路径总和.cpp  115. 不同的子序列.cpp  115. 不同的子序列.py  118. 杨辉三角.py  123. 买卖股票的最佳时机 III.py  128. 最长连续序列.py  129. 求根节点到叶节点数字之和.cpp  132. 分割回文串 II.cpp  135. 分发糖果.cpp  138. 随机链表的复制.cpp  139. 单词拆分.py  140. 单词拆分 II.cpp  141. 环形链表.cpp  142. 环形链表 II.cpp  146. LRU 缓存.py  152. 乘积最大子数组.cpp  153. 寻找旋转排序数组中的最小值.py  154. 寻找旋转排序数组中的最小值 II.py  174. 地下城游戏.py  175. 组合两个表.sql  179. 最大数.cpp
模板/: LogTrick.cpp  py所有库.py  取模.cpp  字符串哈希.cpp  数位dp模板.cpp  树倍增找祖先和lca.cpp  树倍增找祖先和lca.py  树状数组307.py  线段树.cpp  线段树.py
(+3323 files in other folders)
